force-app/main/default/objects/Git_Repository__c/fields/Allow_Functions_Git_Cache__c.field-meta.xml
<CustomField>
    <fullName>Allow_Functions_Git_Cache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Functions Git Cache</label>
    <type>Checkbox</type>
</CustomField>