force-app/main/default/objects/Git_Repository__c/fields/Source_Format__c.field-meta.xml
<CustomField>
    <fullName>Source_Format__c</fullName>
    <description>Choose between standard Metadata API folder and file structure or DX source structure that uses a different set of files and file extensions. Default is Metadata.</description>
    <inlineHelpText>Choose between standard Metadata API folder and file structure or DX source structure that uses a different set of files and file extensions. Default is Metadata.</inlineHelpText>
    <label>Source Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
                <default>true</default>
                <label>Metadata</label>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>