force-app/main/default/objects/Git_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URI__c</columns>
    <columns>Source_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>